--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="72" width="314" height="101"/>
+                                    <rect key="frame" x="16" y="72" width="314" height="66"/>
                                 </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinsteinStamp.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="D1f-5N-zsx">
@@ -104,6 +104,15 @@
                                     <rect key="frame" x="250" y="174" width="80" height="80"/>
                                 </variation>
                             </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8aa-NO-Itc">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="174" width="226" height="37"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="kU7-IH-A6d"/>
                                 <exclude reference="Yed-qB-bJo"/>
                                 <exclude reference="D1f-5N-zsx"/>
+                                <exclude reference="8aa-NO-Itc"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="kU7-IH-A6d"/>
                                 <include reference="Yed-qB-bJo"/>
                                 <include reference="D1f-5N-zsx"/>
+                                <include reference="8aa-NO-Itc"/>
                             </mask>
                         </variation>
                     </view>
@@ -129,7 +140,8 @@
                         <outlet property="enterMessageTextField" destination="g9z-UH-Bxb" id="zmo-Wz-20U"/>
                         <outlet property="enterNameTextField" destination="qxL-qq-xpG" id="2Ov-X0-ceL"/>
                         <outlet property="mailButton" destination="kU7-IH-A6d" id="xgN-JP-o7X"/>
-                        <outlet property="messageLabel" destination="Yed-qB-bJo" id="v1K-pf-mpH"/>
+                        <outlet property="messageLabel" destination="Yed-qB-bJo" id="Lad-J6-St2"/>
+                        <outlet property="nameLabel" destination="8aa-NO-Itc" id="xqA-22-ysm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
